resource card spacing issue fixed

--- a/app/javascript/assets/stylesheets/_denizen_resources.scss
+++ b/app/javascript/assets/stylesheets/_denizen_resources.scss
@@ -3,6 +3,7 @@
   min-height: 11.25rem;
   border-radius: 4px;
 }
+
 .card1 {
   background: url('https://res.cloudinary.com/dyy8g76av/image/upload/v1613443433/Denizen%20Designer%20%28Temp%29/resourcesImage1_y6yyqq.png');
   min-height: 11.25rem;
@@ -119,6 +120,12 @@
   display: flex;
   align-items: center; /* align vertical */
   width: 100%;
+  // background-color: red;
+}
+
+.resource-card-row {
+  width: 100%;
+  // background-color: green;
 }
 
 
